Fix the spacing on top of the page for small screens on about.html

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -68,7 +68,7 @@ main div {
 
 @media screen and (max-width: 600px) {
     main {
-        padding: 180px 2% 60px;
+        padding: 120px 2% 60px;
     }
 
     h3 {
